# ObjectDelineation

./: CMakeLists.txt  README.md  jkr
src/: ObjectDelineation.cpp  ObjectDelineation.h  main.cpp  object_delineation.cu
tests/: gtest.h  test_main.cpp  test_main_3.cpp
